# cuddly-potato

./: .coveragerc  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  precommit.yml
codex-audit/: convert_logs.py  docs.md  remove_codex_audit.py  setup_codex_audit.py
codex-audit/templates/: audit_notify_hook.py
cuddly_potato/: __init__.py  cli.py  database.py  gui.py  logging_utils.py
docs/: developer_diary.md
scripts/: generate_icon.py  pre-commit
src/pdfnotebook/: __init__.py  db.py  pdf_processor.py  webapp.py
src/pdfnotebook/static/: app.css  app.js  test_ui.js
src/pdfnotebook/templates/: index.html  test_ui.html
tests/: __init__.py  test_cli.py  test_cli_flow.py  test_database.py
utils/: README.md  hooks_setup.md  install-claude-wrapper.sh
utils/scripts/: claude_with_hooks.py  collect_claude_logs.py  copy_project_logs.py  install_claude_wrapper.sh  uninstall_claude_wrapper.sh  view_logs.py
