[tool.poetry]
name = "cuddly-potato"
version = "0.1.0"
description = "A CLI and GUI tool for logging and managing data entries"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "cuddly_potato" }]

[tool.poetry.dependencies]
python = "^3.10"
Click = "*"
rich = "*"
customtkinter = "*"
openpyxl = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
ruff = "*"
mypy = "*"
pytest-cov = "*"

[tool.poetry.scripts]
cuddly-potato = "cuddly_potato.cli:cli"

[tool.coverage.run]
omit = ["cuddly_potato/gui.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
